@@ -1,3 +1,4 @@
+Made it so text boxes are not editable for x,v,a in Forces and Motion
 Removed sliders from x,v,a graphs in Forces and Motion
 # 1.03.42 (35247) Sep 24, 2009
 # 1.03.42 (35245) Sep 24, 2009
